--- a/src/main/resources/templates/acessos/login.html
+++ b/src/main/resources/templates/acessos/login.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <title>Página de Login</title>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+        }
+
+        form {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 20px;
+            margin: 50px auto;
+            max-width: 400px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        button[type="submit"] {
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            float: right;
+        }
+    </style>
 </head>
 <body>
-<h1>Login</h1>
 <form action="app/login" method="post">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-    <label for="senha">Senha:</label>
-    <input type="password" id="senha" name="senha" required><br><br>
-    <input type="submit" value="Entrar">
+    <h2>Login</h2>
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required>
+    <p>Não possui uma conta? <a href="../clientes/cadastro">Cadastrar</a></p>
+    <button type="submit">Login</button>
 </form>
-<p>Não possui uma conta? <a href="../clientes/cadastro">Cadastrar</a></p>
 </body>
 </html>
