--- a/src/main/resources/templates/clientes/cliente-result.html
+++ b/src/main/resources/templates/clientes/cliente-result.html
@@ -7,16 +7,22 @@
 <body>
 <h1>Informações do Cliente</h1>
 
-<div th:if="${clienteSearch.isPresent()}">
-  <label th:text="${clienteSearch.get().getNome()}">Nome: </label>
-  <label th:text="${clienteSearch.get().getSobrenome()}">Nome: </label> </br>
-  <label th:text="${clienteSearch.get().getEmail}">Email: </label> </br>
-  <label th:text="${clienteSearch.get().getDataDeNascimento}">Data de Nascimento: </label> </br>
-  <label th:text="${clienteSearch.get().getTelefone}">Telegone: </label> </br>
-  <label th:text ="${clienteSearch.get().getEndereco}">Endereco: </label> </br>
+<div th:if="${cliente != null}">
+  <label>Nome: </label>
+  <label th:text="${cliente.nome}"></label> </br>
+  <label>Sobrenome: </label>
+  <label th:text="${cliente.sobrenome}"></label> </br>
+  <label>Email: </label>
+  <label th:text="${cliente.email}"></label> </br>
+  <label>Data de Nascimento: </label>
+  <label th:text="${#dates.format(cliente.dataNascimento, 'dd/MM/yyyy')}"></label> </br>
+  <label>Telefone: </label>
+  <label th:text="${cliente.telefone}"></label> </br>
+  <label>Endereço: </label>
+  <label th:text="${cliente.endereco}"></label> </br>
 </div>
 
-<div th:if="${not clienteSearch.isPresent()}">
+<div th:if="${cliente == null}">
   <p>Cliente não encontrado</p>
 </div>
 
