--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -5,6 +5,7 @@
     height: 250px;
     max-width: 100%;
     overflow: visible;
+    background-color:   rgb(0, 0, 0);;
 }
 
 .banner-image {
@@ -13,6 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    mask-image: linear-gradient(to right, rgba(255,0,0,0), rgb(0, 0, 0));
 }
 
 .movie-info {
@@ -25,7 +27,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    color: #fff;
+    color: #fafafa;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
