--- a/front-end/src/style/login.css
+++ b/front-end/src/style/login.css
@@ -13,7 +13,7 @@ label {
     margin-bottom: 10px;
     text-align: justify;
 }
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="email"] {
     display: block;
     width: 97%;
     padding: 10px;
