--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -2,22 +2,21 @@
     margin-top: 50px;
     position: relative;
     width: 100vw;
-    height: 250px;
+    height: 100vh;
     max-width: 100%;
     overflow: visible;
-    background-color:   rgb(0, 0, 0);;
-}
-
-.banner-image {
-    position: absolute;
+    background-color: rgb(0, 0, 0);
+  }
+  
+  .banner-image {
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    mask-image: linear-gradient(to right, rgba(255,0,0,0), rgb(0, 0, 0));
-}
-
-.movie-info {
+    mask-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(0, 0, 0));
+  }
+  
+  .movie-info {
     position: absolute;
     top: 20%;
     left: 270px;
@@ -29,19 +28,19 @@
     align-items: flex-start;
     color: #fafafa;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.movie-info h1 {
+  }
+  
+  .movie-info h1 {
     font-size: 24px;
     margin: 0;
-}
-
-.movie-info p {
+  }
+  
+  .movie-info p {
     margin: 5px 0;
     display: inline-block;
-}
-
-.genre-border {
+  }
+  
+  .genre-border {
     display: flex;
     align-items: center;
     padding: 3px 5px;
@@ -50,22 +49,22 @@
     font-size: 14px;
     border-radius: 4px;
     margin-left: 10px;
-}
-
-.genres {
+  }
+  
+  .genres {
     display: flex;
-}
-
-.age-rating {
+  }
+  
+  .age-rating {
     display: inline-block;
     padding: 5px 10px;
     color: #fff;
     font-weight: bold;
     font-size: 14px;
     border-radius: 4px;
-}
-
-.movie-poster {
+  }
+  
+  .movie-poster {
     position: absolute;
     top: -25px;
     left: 50px;
@@ -76,9 +75,16 @@
     justify-content: center;
     align-items: center;
     border: 2px solid black;
-}
-
-.poster-image {
+  }
+  
+  .poster-image {
     max-width: 100%;
     max-height: 100%;
-}
+  }
+  
+  .trailer-sinopse {
+    position: absolute;
+    top: 40%;
+    z-index: 2;
+  }
+  
