--- a/front-end/src/style/TrailerSinopse.css
+++ b/front-end/src/style/TrailerSinopse.css
@@ -1,20 +1,31 @@
 .trailer-and-sinopse {
   display: flex;
   margin: 20px;
+  color: #fff;
+  text-shadow: 1px 1px #000;
+  padding-top: 3%;
 }
 
 .trailer {
-  flex-basis: 50%;
-  padding-right: 20px;
+  
+  
+  color: #fff;
+  background-color: #fff;
+  border: 5px solid white;
+  border-bottom: 4px;
 }
 
 .sinopse {
   flex-basis: 50%;
+  color: #fff;
+  padding: 0 50px;
 }
 
 .showtime-items {
   display: flex;
-  margin-top: 20px;
+  margin-top: 50px;
+  margin-left: 5px;
+  color: #fff;
 }
 
 .showtime-item {
@@ -31,21 +42,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .showtime-item .time {
   font-weight: bold;
   margin-bottom: 5px;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   padding: 5px 10px;
   text-decoration: none;
-  color: #000;
+  color: #fff;
 }
 
 .showtime-item .time:hover {
   background-color: #000;
   color: #fff;
+  transform: scale(1.1);
+  transition: transform 0.1s ease-in-out;
 }
 
 .showtime-item .type {
