--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -18,7 +18,7 @@
   
   .movie-info {
     position: absolute;
-    top: 20%;
+    top: 60px;
     left: 270px;
     transform: translateY(-50%);
     z-index: 1;
