--- a/front-end/src/style/carrosselFilmes.css
+++ b/front-end/src/style/carrosselFilmes.css
@@ -15,7 +15,7 @@
 }
 
 .movie {
-    flex: 0 0 550px;
+    flex: 0 0 400px;
     width: 100%;
     margin-right: 10px;
     vertical-align: top;
@@ -45,7 +45,7 @@
     text-align: center;
     transition: background-color 0.3s;
     border-top-right-radius: 25%;
-    border-top-left-radius: 25%;
+    font-size: x-large;
 }
 
 .movie:hover .title {
@@ -88,5 +88,4 @@
 .title h1{
     margin-left: 3%;
     color: #333;
-    
 }
