mexi na posicao das coisas nos arquivos TrailerSinopse e Banner

--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -54,6 +54,10 @@
   .genres {
     display: flex;
   }
+
+  .genres p {
+    margin-right: 5px;
+  }
   
   .age-rating {
     display: inline-block;
