--- a/front-end/src/style/cadeirasCine.css
+++ b/front-end/src/style/cadeirasCine.css
@@ -1,8 +1,8 @@
-.container {
+.container-cadeira {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    margin: 50px 0px 0px 50px;
     width: 700px;
     height: 700px;
 }
