--- a/front-end/src/style/carrosselFilmes.css
+++ b/front-end/src/style/carrosselFilmes.css
@@ -78,14 +78,14 @@
 }
 
 
-.title{
+.title-filme{
     display: flex;
     align-items: baseline;
     font-size: 1.5em;
 }
 
 
-.title h1{
+.title-filme h1{
     margin-left: 3%;
     color: #333;
     
