--- a/front-end/src/style/TrailerSinopse.css
+++ b/front-end/src/style/TrailerSinopse.css
@@ -4,6 +4,7 @@
   color: #fff;
   text-shadow: 1px 1px #000;
   padding-top: 3%;
+  justify-content: center;
 }
 
 .trailer {
@@ -66,4 +67,5 @@
 .showtime-items-container {
   position: absolute;
   bottom: 20px;
+  
 }
