--- a/front-end/src/style/TrailerSinopse.css
+++ b/front-end/src/style/TrailerSinopse.css
@@ -67,5 +67,58 @@
 .showtime-items-container {
   position: absolute;
   bottom: 20px;
+}
+
+/* Estilos para tablets */
+@media only screen and (max-width: 768px) {
+  .trailer-and-sinopse {
+    flex-direction: column;
+    align-items: center;
+  }
   
+  .sinopse, .trailer {
+    flex-basis: auto;
+  }
+  
+  .showtime-items-container {
+    position: static;
+    margin-top: 20px;
+    justify-content: center;
+  }
+  
+  .showtime-item .time-box {
+    margin-right: 10px;
+  }
+
+  .trailer {
+    margin-top: 20px;
+  }
+}
+
+/* Estilos para celulares */
+@media only screen and (max-width: 480px) {
+  .trailer-and-sinopse {
+    flex-direction: column;
+    align-items: center;
+    width: 90vw;
+  }
+  
+  .sinopse, .trailer {
+    flex-basis: auto;
+    width: 100%;
+  }
+  
+  .trailer {
+    margin-top: 20px;
+  }
+  
+  .showtime-items {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .showtime-item .time-box {
+    margin-right: 5px;
+    margin-bottom: 20px;
+  }
 }
