--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -1,94 +1,101 @@
 .movie-banner {
-    margin-top: 50px;
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    max-width: 100%;
-    overflow: visible;
-    background-color: rgb(0, 0, 0);
-  }
-  
-  .banner-image {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    mask-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(0, 0, 0));
-  }
-  
-  .movie-info {
-    position: absolute;
-    top: 60px;
-    left: 270px;
-    transform: translateY(-50%);
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    color: #fafafa;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  
-  .movie-info h1 {
-    font-size: 24px;
-    margin: 0;
-  }
-  
-  .movie-info p {
-    margin: 5px 0;
-    display: inline-block;
-  }
-  
-  .genre-border {
-    display: flex;
-    align-items: center;
-    padding: 3px 5px;
-    border: 2px solid #fff;
-    font-weight: bold;
-    font-size: 14px;
-    border-radius: 4px;
-    margin-left: 10px;
-  }
-  
-  .genres {
-    display: flex;
-  }
+  margin-top: 50px;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  max-width: 100%;
+  overflow: visible;
+  background-color: rgb(0, 0, 0);
+}
 
-  .genres p {
-    margin-right: 5px;
-  }
+.banner-image {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  mask-image: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(0, 0, 0));
+}
+
+.movie-info {
+  position: absolute;
+  top: 60px;
+  left: 270px;
+  transform: translateY(-50%);
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: #fafafa;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.movie-info h1 {
+  font-size: 24px;
+  margin: 0;
+}
+
+.movie-info p {
+  margin: 5px 0;
+  display: inline-block;
+}
+
+.genre-border {
+  display: flex;
+  align-items: center;
+  padding: 3px 5px;
+  border: 2px solid #fff;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 4px;
+  margin-left: 10px;
+}
+
+.genres {
+  display: flex;
+}
+
+.genres p {
+  margin-right: 5px;
+}
+
+.age-rating {
+  display: inline-block;
+  padding: 5px 10px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  border-radius: 4px;
+}
+
+.movie-poster {
+  position: absolute;
+  top: -25px;
+  left: 50px;
+  width: 200px;
+  height: 300px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+}
+
+.poster-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.trailer-sinopse {
+  position: absolute;
+  top: 40%;
+  z-index: 2;
+}
+
+/* Estilos para tablets */
+@media only screen and (max-width: 834px) {}
+
+/* Estilos para celulares */
+@media only screen and (max-width: 480px) {
   
-  .age-rating {
-    display: inline-block;
-    padding: 5px 10px;
-    color: #fff;
-    font-weight: bold;
-    font-size: 14px;
-    border-radius: 4px;
-  }
-  
-  .movie-poster {
-    position: absolute;
-    top: -25px;
-    left: 50px;
-    width: 200px;
-    height: 300px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid black;
-  }
-  
-  .poster-image {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  
-  .trailer-sinopse {
-    position: absolute;
-    top: 40%;
-    z-index: 2;
-  }
-  
+}
