--- a/front-end/src/style/TrailerSinopse.css
+++ b/front-end/src/style/TrailerSinopse.css
@@ -70,7 +70,7 @@
 }
 
 /* Estilos para tablets */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 834px) {
   .trailer-and-sinopse {
     flex-direction: column;
     align-items: center;
@@ -110,6 +110,11 @@
   
   .trailer {
     margin-top: 20px;
+  }
+
+  .trailer iframe {
+    width: 350px;
+    height: 200px;
   }
   
   .showtime-items {
