--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -93,7 +93,62 @@
 }
 
 /* Estilos para tablets */
-@media only screen and (max-width: 834px) {}
+@media only screen and (max-width: 834px) {
+  .movie-info {
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    width: calc(100% - 40px);
+    text-align: center;
+  }
+
+  .movie-info h1 {
+    font-size: 2em;
+    margin-bottom: 10px;
+  }
+
+  .genre-border {
+    font-size: 1.3em;
+  }
+
+  .age-rating {
+    margin-top: 10px;
+    font-size: 1.3em;
+  }
+
+  .banner-image {
+    display: none;
+  }
+
+  .trailer-sinopse {
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: calc(100% - 40px);
+    justify-content: center;
+  }
+
+  .movie-poster {
+    position: static;
+    width: 100%;
+    height: auto;
+    background-color: transparent;
+    margin-top: 10px;
+    overflow: hidden;
+  }
+
+  .movie-poster::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2));
+  }
+}
+
 
 /* Estilos para celulares */
 @media only screen and (max-width: 480px) {
