--- a/front-end/src/style/TrailerSinopse.css
+++ b/front-end/src/style/TrailerSinopse.css
@@ -76,15 +76,10 @@
     align-items: center;
   }
   
-  .sinopse, .trailer {
-    flex-basis: auto;
-  }
-  
   .showtime-items-container {
     position: static;
     margin-top: 20px;
-    justify-content: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-size: x-large;
   }
   
@@ -97,8 +92,13 @@
   }
 
   .sinopse p {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     font-size: x-large;
+  }
+
+  .sinopse {
+    margin-left: 50%;
+    margin-right: 50%;
   }
 }
 
@@ -107,12 +107,6 @@
   .trailer-and-sinopse {
     flex-direction: column;
     align-items: center;
-    width: 90vw;
-  }
-  
-  .sinopse, .trailer {
-    flex-basis: auto;
-    width: 100%;
   }
   
   .trailer {
@@ -131,6 +125,16 @@
   
   .showtime-item .time-box {
     margin-right: 5px;
+  }
+
+  .showtime-items-container {
     margin-bottom: 20px;
+    font-size: x-small;
+    width: 90vw;
+  }
+
+  .sinopse p {
+    margin-bottom: 30px;
+    font-size: medium;
   }
 }
