--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -44,7 +44,7 @@
   display: flex;
   align-items: center;
   padding: 3px 5px;
-  border: 2px solid #fff;
+  border: 2px solid #fafafa;
   font-weight: bold;
   font-size: 14px;
   border-radius: 4px;
@@ -62,7 +62,7 @@
 .age-rating {
   display: inline-block;
   padding: 5px 10px;
-  color: #fff;
+  color: #fafafa;
   font-weight: bold;
   font-size: 14px;
   border-radius: 4px;
@@ -74,7 +74,7 @@
   left: 50px;
   width: 200px;
   height: 300px;
-  background-color: white;
+  background-color: #fafafa;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -126,7 +126,7 @@
   }
 
   .banner-image {
-    mask-image: linear-gradient(to top, rgba(255, 0, 0, 0), rgb(0, 0, 0));
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.233), rgb(0, 0, 0));
   }
 }
 
@@ -163,10 +163,6 @@
     transform: translateX(-50%);
     width: calc(100% - 40px);
     justify-content: center;
-  }
-
-  .movie-banner {
-    width: 109vw;
   }
 }
 
