--- a/front-end/src/style/TrailerSinopse.css
+++ b/front-end/src/style/TrailerSinopse.css
@@ -1,14 +1,14 @@
 .trailer-and-sinopse {
   display: flex;
   margin: 20px;
-  color: #fff;
+  color: #fafafa;
   text-shadow: 1px 1px #000;
   padding-top: 3%;
   justify-content: center;
 }
 
 .trailer {
-  color: #fff;
+  color: #fafafa;
   background-color: #fff;
   border: 5px solid white;
   border-bottom: 4px;
@@ -16,7 +16,7 @@
 
 .sinopse {
   flex-basis: 50%;
-  color: #fff;
+  color: #fafafa;
   padding: 0 50px;
 }
 
@@ -24,7 +24,7 @@
   display: flex;
   margin-top: 50px;
   margin-left: 5px;
-  color: #fff;
+  color: #fafafa;
 }
 
 .showtime-item {
@@ -47,15 +47,15 @@
 .showtime-item .time {
   font-weight: bold;
   margin-bottom: 5px;
-  border: 1px solid #fff;
+  border: 1px solid #fafafa;
   padding: 5px 10px;
   text-decoration: none;
-  color: #fff;
+  color: #fafafa;
 }
 
 .showtime-item .time:hover {
   background-color: #000;
-  color: #fff;
+  color: #fafafa;
   transform: scale(1.1);
   transition: transform 0.1s ease-in-out;
 }
