--- a/front-end/src/style/TrailerSinopse.css
+++ b/front-end/src/style/TrailerSinopse.css
@@ -4,7 +4,7 @@
   color: #fafafa;
   text-shadow: 1px 1px #000;
   padding-top: 3%;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .trailer {
