Pequenas Mudancas na tela onde escolhe as cadeiras
Fiz pequenas mudanças na tela onde escolhe as cadeiras, estou preparando para fazer o accordion

--- a/front-end/src/style/Banner.css
+++ b/front-end/src/style/Banner.css
@@ -73,7 +73,7 @@
   top: -25px;
   left: 50px;
   width: 200px;
-  height: 300px;
+  height: auto;
   background-color: #fafafa;
   display: flex;
   justify-content: center;
