Primeira parte do accordion pronta

--- a/front-end/src/style/CompraFilme.css
+++ b/front-end/src/style/CompraFilme.css
@@ -1,9 +1,13 @@
+/* CompraFilme.css */
+
 .containerCompra{
     display: flex;
-    justify-content:center ;
+    justify-content:center;
+    flex-direction: column;
 }
 
 .cadeirasEaccordion{
     display: flex;
-    flex-direction: column;
+    justify-content:center;
+    flex-direction: row;
 }
