--- a/front-end/src/style/Accordion.css
+++ b/front-end/src/style/Accordion.css
@@ -1,35 +1,55 @@
 /* Estilo para o componente Accordion */
 .accordion {
-    width: 100%;
-    margin-top: 20px;
+    width: 95%;
+    margin-top: 3px;
     margin-bottom: 20px;
-    /* Adicione este estilo para criar um espaço entre o Accordion e o restante da página */
     min-height: 100px;
-    /* Aumente a altura conforme necessário */
+    margin-left: 41px;
 }
 
 .accordion-header {
     cursor: pointer;
     padding: 15px;
-    background-color: #f5f5f5;
+    background-color: #e78312;
     font-weight: bold;
+    border: 1px solid black;
+    border-top: transparent;
 }
 
-.accordion-header:hover {
-    background-color: #e5e5e5;
+.accordion-header-first {
+    cursor: pointer;
+    padding: 15px;
+    background-color: #e78312;
+    font-weight: bold;
+    border: 1px solid black;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .accordion-content {
-
     padding: 15px;
     background-color: #fff;
-    height: 150px;
-    /* Ajuste a altura conforme necessário */
-    overflow: auto;
-    /* Adicione este estilo para adicionar uma barra de rolagem se o conteúdo exceder a altura definida */
+    height: auto;
+    border: 1px solid black;
+    border-top: transparent;
 }
-
 
 .accordion-content.active {
     display: block;
+}
+
+/* Estilo para o botão de confirmar */
+.accordion-confirm-button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: #fafafa;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.accordion-confirm-button:hover {
+    background-color: #28a746d5;
 }
