--- a/front-end/src/style/infoFilme.css
+++ b/front-end/src/style/infoFilme.css
@@ -9,7 +9,7 @@
 .poster {
   display: flex;
   align-items: center;
-  margin: 50px 0px 0px 20px;
+  margin: 30px 0px 0px 20px;
   padding: 10px;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -115,7 +115,6 @@
 }
 
 .dinheiro {
-  color: #69ac4f;
-  font-size: 1.5em;
-  text-decoration: underline;
+  color: #000000;
+  font-size: 1.3em;
 }
