--- a/front-end/src/style/Header.css
+++ b/front-end/src/style/Header.css
@@ -82,3 +82,28 @@ header {
     font-size: 2em;
   }
 }
+.profile-popup {
+  position: absolute;
+  top: 5%;
+  right: 0;
+  display: block;
+  width: 150px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.logout-button {
+  width: 100%;
+  padding: 8px 10px;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.logout-button:hover {
+  background-color: #c82333;
+}
