--- a/front-end/src/style/CadeirasSelecionadas.css
+++ b/front-end/src/style/CadeirasSelecionadas.css
@@ -5,7 +5,7 @@
     height: 30px;
     margin: 3px;
     margin-top: 15px;
-    background-color: #28a745;
+    background-color: #125021;
     color: #fafafa;
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
