--- a/front-end/src/style/sessoesEspeciais.css
+++ b/front-end/src/style/sessoesEspeciais.css
@@ -14,7 +14,7 @@
 
 .se_movie-date {
     background-color: mediumvioletred;
-    width: 50%;
+    width: 100px;
     height: 30px;
     color: #fafafa;
     font-weight: bold;
