--- a/front-end/src/style/Cadastro.css
+++ b/front-end/src/style/Cadastro.css
@@ -57,3 +57,16 @@ input[type="submit"]:hover {
     width: 100%;
     height: 100%;
 }
+.SuccessMessage{
+    
+    text-align: center;
+    padding: 20%;
+    background-color: #fafafac3;
+    margin: 5% auto;
+    border-radius: 10px;
+}
+
+.div-icone{
+    color: #4daf50;
+    font-size: 10vb;
+}
