--- a/front-end/src/style/login.css
+++ b/front-end/src/style/login.css
@@ -62,6 +62,59 @@ p {
     display: block;
     text-align: justify;
 }
+
 .SignupForm{
     position: relative;
+}
+
+.tnt-novamente-txt{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: left;
+    margin-bottom: 20px;
+    margin-top: -10px;
+}
+
+
+.tnt-novamente{
+    text-decoration: none;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #8f2121;
+    color: #fafafa;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.tnt-novamente:hover {
+    background-color: #671818;
+}
+
+.tnt-feita-txt{
+    margin-bottom: 20px;
+    margin-top: -10px;
+}
+.tnt-feita-txt h2{
+    margin-top: 0;
+    color: #218f39;
+    font-size: 10em;
+}
+
+.tnt-feita{
+    text-decoration: none;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #218f39;
+    color: #fafafa;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.tnt-feita:hover {
+    background-color: #155a24;
 }
