--- a/front-end/src/style/sessoesEspeciais.css
+++ b/front-end/src/style/sessoesEspeciais.css
@@ -12,6 +12,20 @@
     margin: 10px 0;
 }
 
+.se_main-title {
+    color: #333;
+    margin: 10px 0;
+    font-size: 2.5em;
+}
+
+.se_list-title {
+    color: #333;
+    margin: 20px 0;
+    font-size: 1.5em;
+    text-align: center;
+}
+
+
 .se_movie-date {
     background-color: mediumvioletred;
     width: 100px;
@@ -58,4 +72,58 @@
 .se_movie-item:hover {
     transform: scale(1.1);
     transition: transform 0.3s ease-in-out;
+}
+
+/* Estilos para dispositivos com largura máxima de 768px, como tablets em modo paisagem e celulares */
+@media (max-width: 834px) {
+    .se_title {
+        font-size: 1.8em;
+        margin-bottom: 10px;
+    }
+
+    .se_movie-date {
+        width: 80px;
+        height: 25px;
+        font-size: 0.9em;
+    }
+
+    #se_movies-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+        padding: 10px;
+    }
+
+    .se_movie-item img {
+        width: 150px;
+        height: 225px;
+    }
+
+    .se_movie-item:hover {
+        transform: none;
+        transition: none;
+    }
+}
+
+/* Estilos para dispositivos com largura máxima de 480px, como celulares em modo retrato */
+@media (max-width: 480px) {
+    .se_title {
+        font-size: 1.2em;
+        text-align: center;
+    }
+
+    #se_movies-grid {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        padding: 10px;
+    }
+
+    .se_movie-item img {
+        width: 100%;
+        height: auto;
+    }
+
+    .se_movie-item:hover {
+        transform: none;
+        transition: none;
+    }
 }
