--- a/front-end/src/style/CadeirasSelecionadas.css
+++ b/front-end/src/style/CadeirasSelecionadas.css
@@ -23,3 +23,19 @@
 .cadeiras-selecionadas h4 {
     margin-right: 10px;
 }
+
+@media only screen and (max-width: 480px) {
+    .cadeira {
+        width: 20px;
+        height: 20px;
+        margin: 2px;
+        margin-top: 11px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        font-size: 10px;
+    }
+
+    .cadeiras-selecionadas h4 {
+        margin-right: 5px;
+    }
+}
